--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "axios": "^0.18.1",
     "babel-polyfill": "^6.26.0",
     "body-parser": "^1.19.0",
+    "cookie-session": "^1.3.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "lodash": "^4.17.15",
     "mongoose": "^5.8.4",
+    "passport": "^0.4.1",
+    "passport-google-oauth20": "^2.0.0",
     "qwest": "^4.5.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
