--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cookie-session": "^1.3.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "image-type": "^4.1.0",
     "lodash": "^4.17.15",
     "mongoose": "^5.8.4",
     "passport": "^0.4.1",
