--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "image-type": "^4.1.0",
     "lodash": "^4.17.15",
     "mongoose": "^5.9.10",
+    "node-cron": "^2.0.3",
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
