--- a/package.json
+++ b/package.json
@@ -9,50 +9,42 @@
     "start": "NODE_ENV=production node ./dist/server.generated.js"
   },
   "engines": {
-    "node": "8.11.1",
-    "npm": "5.8.0"
+    "node": "12.16.x",
+    "npm": "6.x"
   },
   "dependencies": {
-    "aws-sdk": "^2.661.0",
+    "aws-sdk": "^2.673.0",
     "axios": "^0.19.2",
     "babel-polyfill": "^6.26.0",
     "body-parser": "^1.19.0",
     "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "image-type": "^4.1.0",
-    "lodash": "^4.17.15",
-    "mongoose": "^5.9.10",
+    "mongoose": "^5.9.13",
     "node-cron": "^2.0.3",
     "passport": "^0.4.1",
-    "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
-    "passport-local": "^1.0.0",
-    "qwest": "^4.5.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-facebook-login": "^4.1.1",
-    "react-google-login": "^5.1.3",
     "react-infinite-scroller": "^1.2.4",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.4.1",
     "react-time-ago": "^5.0.8",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "request": "^2.88.2",
     "request-promise": "^4.2.5",
-    "uuid": "^7.0.3"
+    "uuid": "^8.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0",
+    "@babel/core": "^7.9.6",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/preset-env": "^7.9.5",
+    "@babel/preset-env": "^7.9.6",
     "@babel/preset-react": "^7.9.4",
     "babel-loader": "^8.1.0",
-    "css-loader": "^3.5.2",
-    "react-hot-loader": "^4.12.20",
-    "style-loader": "^1.1.4",
+    "css-loader": "^3.5.3",
+    "react-hot-loader": "^4.12.21",
+    "style-loader": "^1.2.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-middleware": "^3.7.2",
